--- a/notes.org
+++ b/notes.org
@@ -29,9 +29,9 @@
 - [X] Set up argparse
 - [X] Set up config file
 - [X] Set up file structure
-- [-] Set up database (with websites and books)
+- [X] Set up database (with websites and books)
   - [X] Adding (raw)
-  - [ ] Editing (raw)
+  - [X] Editing (raw)
   - [X] Removing
 - [ ] Set up search
 - [ ] Set up scraping
