--- a/notes.org
+++ b/notes.org
@@ -25,7 +25,7 @@
   - When searching, show and highlight columns being searched
 - Check to see if new versions of paper are available automatically
 
-* Roadmap [63%]
+* Roadmap [73%]
 
 - [X] Set up argparse
 - [X] Set up config file
@@ -41,8 +41,8 @@
 - [X] Set up UI
 - [X] Add table and preview
 - [X] Add actions (commands in lower panel)
-- [ ] Add marks (selection)
-- [ ] Add search
+- [X] Add marks (selection)
+- [X] Add search
 - [X] Add papers
 - [ ] Detect new files in directory, scrape and add
 - [ ] Batch import
