--- a/notes.org
+++ b/notes.org
@@ -25,7 +25,7 @@
   - When searching, show and highlight columns being searched
 - Check to see if new versions of paper are available automatically
 
-* Roadmap [73%]
+* Roadmap [78%]
 
 - [X] Set up argparse
 - [X] Set up config file
@@ -44,7 +44,7 @@
 - [X] Add marks (selection)
 - [X] Add search
 - [X] Add papers
-- [ ] Detect new files in directory, scrape and add
+- [X] Detect new files in directory, scrape and add
 - [ ] Batch import
 - [ ] Add installation guide and nice, user-friendly documentation
 - [ ] Add JSON output support for CLI
