--- a/notes.org
+++ b/notes.org
@@ -25,7 +25,7 @@
   - When searching, show and highlight columns being searched
 - Check to see if new versions of paper are available automatically
 
-* Roadmap [78%]
+* Roadmap [84%]
 
 - [X] Set up argparse
 - [X] Set up config file
@@ -45,7 +45,7 @@
 - [X] Add search
 - [X] Add papers
 - [X] Detect new files in directory, scrape and add
-- [ ] Batch import
+- [X] Batch import
 - [ ] Add installation guide and nice, user-friendly documentation
 - [ ] Add JSON output support for CLI
 - [ ] Add markdown support for notes
